@startuml SWR-PH1_state-ignition
title Phase 1 상태 다이어그램 — Ignition 상태와 논리 차일드락 출력 (SWR-020, SWR-004)

[*] --> OFF

OFF --> ACTIVE : ignition_on = TRUE\n(SWR-020c: lock_left/right는 RELEASE로\n유지, 직전 래치 명령 복원 안 함)
ACTIVE --> OFF : ignition_on = FALSE 또는 INVALID\n(SWR-020a/b: lock_left/right -> RELEASE,\nstate=OFF, reason_code=IGNITION_OFF)

state ACTIVE {
  [*] --> RELEASED
  RELEASED --> LOCKED_LEFT : Driver_Command(side=left, action=lock)\n(SWR-001/002/004)
  RELEASED --> LOCKED_RIGHT : Driver_Command(side=right, action=lock)
  RELEASED --> LOCKED_ALL : Driver_Command(side=all, action=lock)
  LOCKED_LEFT --> RELEASED : Driver_Command(side=left, action=unlock)
  LOCKED_RIGHT --> RELEASED : Driver_Command(side=right, action=unlock)
  LOCKED_ALL --> RELEASED : Driver_Command(side=all, action=unlock)
  LOCKED_LEFT --> LOCKED_ALL : Driver_Command(side=right, action=lock)
  LOCKED_RIGHT --> LOCKED_ALL : Driver_Command(side=left, action=lock)
  LOCKED_ALL --> LOCKED_RIGHT : Driver_Command(side=left, action=unlock)
  LOCKED_ALL --> LOCKED_LEFT : Driver_Command(side=right, action=unlock)
}

note right of OFF
  ignition_on=TRUE 복귀 시 출력은
  무조건 RELEASE로 유지된다(안전측
  기본값, 사용자 확정 2026-09-18).
  ACTIVE 진입 후 새 Driver_Command로만
  잠금 가능(SWR-001/002/004).
end note
@enduml
